--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-pyrogram==2.0.106
-requests==2.31.0
-dnspython==2.6.1
-tgcrypto==1.2.5
-asyncio==3.4.3
-openai==1.14.0
-bardapi==0.1.38
+aiofiles
+pyrogram
+requests
+dnspython
+# tgcrypto
+asyncio
+pymongo
+motor
+pillow
+numpy
